--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -10,6 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install NPM dependencies
+        run: |
+          npm install --production --unsafe-perm
+
+      - name: OWASP
+        uses: sburris/dependency-check-action@master
+        with:
+          Project-Name: juice-shop
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v1.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
       - name: Load AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -17,11 +32,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+
       - name: EKS
         run: |
           sed -i "s#IMAGE_NAME#nypsyy/ssc#g" kustomization.yaml
           sed -i "s/IMAGE_TAG/sha-$(git rev-parse --short HEAD)/g" kustomization.yaml
           aws eks update-kubeconfig --name isen
           kubectl kustomize | kubectl apply -f -
+
       - name: Print App Hostname
         run: echo ${{ steps.deploy.outputs.cf_output_AppHostname }}
