--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           wget https://github.com/optiopay/klar/releases/download/v2.4.0/klar-2.4.0-linux-amd64 -O klar
           chmod +x klar
-          CLAIR_ADDR=http://clair.3r1.io:6060 ./klar docker.io/nypsyy/juice-shop:sha-$(git rev-parse --short HEAD)
+          CLAIR_ADDR=http://clair.3r1.io:6060 ./klar nypsyy/juice-shop:sha-$(git rev-parse --short HEAD)
 
       - name: Load AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
