--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -41,6 +41,11 @@ jobs:
           wget https://github.com/optiopay/klar/releases/download/v2.4.0/klar-2.4.0-linux-amd64 -O klar
           chmod +x klar
           CLAIR_ADDR=http://clair.3r1.io:6060 ./klar nypsyy/juice-shop:sha-$(git rev-parse --short HEAD)
+      
+      - name: AWS region-output
+        run: |
+          aws configure set default.region us-east-1
+          aws configure default.output json
 
       - name: Load AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
